istio-04-igw-virtualhost/webapl-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapl2
  labels:
    app: webapl2
    service: webapl2
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: webapl2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapl2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapl2
      version: v1
  template:
    metadata:
      labels:
        app: webapl2
        version: v1
    spec:
      containers:
      - image: docker.io/maho/webapl2:0.1
        imagePullPolicy: IfNotPresent
        name: webapl2
        ports:
        - containerPort: 8080
