istio-04-igw-virtualhost/virtualhost-gateway-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: svc2-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "svc2.labo.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: svc2
spec:
  hosts:
  - "svc2.labo.local"
  gateways:
  - svc2-gateway
  http:
  - route:
    - destination:
        host: webapl2
        port:
          number: 8080
